k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: code-class-website
  name: code-class-website
  namespace: code-class-website
spec:
  replicas: 1
  selector:
    matchLabels:
      run: code-class-website
  template:
    metadata:
      labels:
        run: code-class-website
    spec:
      containers:
      - image: 479119651457.dkr.ecr.ap-southeast-2.amazonaws.com/code-class-website:1.0.0
        name: code-class-website
        ports:
        - containerPort: 80
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: code-class-website
  name: code-class-website
  namespace: code-class-website
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    run: code-class-website
